--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,18 @@
 {
-    "manifest_version": 3,
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
-    "version": "1.0",
-    "action": {
-      "default_popup": "hello.html",
+  "manifest_version": 3,
+  "name": "Hello Extensions",
+  "description": "Base Level Extension",
+  "version": "1.0",
+  "action": {
+      "default_popup": "interface.html",
       "default_icon": "hello_extensions.png"
-    }
+  },
+  "permissions": [
+      "activeTab",
+      "scripting",
+      "storage"
+  ],
+  "background": {
+      "service_worker": "background.js"
   }
+}
