Updated manifest file

--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,7 @@
         "activeTab",
         "scripting",
         "storage",
-        "webRequest",
-        "scripting"
+        "webRequest"
     ],
     "host_permissions": [
         "http://localhost/*"
